# drag-and-drop-be

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  project-structure.txt  pyproject.toml  start.py  start.sh
alembic/: env.py
alembic/versions/: 93ab7acfc453_create_initial_tables.py
src/: main.py
src/api/v1/: file.py  file_router.py  folder.py  folder_router.py
src/core/: config.py  database.py  logger.py
src/exceptions/: file_exception_handler.py  file_exceptions.py  folder_exception_handler.py  folder_exceptions.py
src/models/: file_model.py  folder.py
src/providers/repositories/: file_repository_provider.py  folder_repository_provider.py
src/providers/services/: file_service_provider.py  folder_service_provider.py
src/repositories/: file_repository.py  folder_repository.py
src/schemas/: file.py  file_schema.py  folder_schema.py
src/services/: file.py  file_service.py  folder.py  folder_service.py
